# marischan888.github.io

./: CHANGELOG.md  MarisBlog.cabal  README.md  site.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes
docs/: index.html  test.html
docs/blogs/: type.html
docs/pages/blogs/: type.md
docs/pages/projects/: test.md
docs/projects/: test.html
pages/: index.md
pages/blogs/: type.md
pages/projects/: test.md
static/js/: script.js
templates/: footer.html  gallery.html  head.html  nav.html
