cabal-version:       2.2

name:                MarisBlog
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/MarisBlog#readme
homepage:            https://marischan888.github.io/
license:             BSD-3-Clause
license-file:        LICENSE
author:              Maris Chen
maintainer:          chenq84@mcmaster.ca
copyright:           2025 Maris Chen
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable MarisBlog
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       pandoc ^>=3.6,
                       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
